# legacy-basic-tree-sitter

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN-DOCUMENT.md  LICENSE  Makefile  README.md  package.json
crates/tree-sitter-gwbasic/: Cargo.toml  build.rs
crates/tree-sitter-gwbasic/src/: lib.rs
crates/tree-sitter-msbasic2/: Cargo.toml  build.rs
crates/tree-sitter-msbasic2/src/: lib.rs
crates/tree-sitter-qbasic/: Cargo.toml  build.rs
crates/tree-sitter-qbasic/src/: lib.rs
docs/superpowers/plans/: 2026-03-26-tree-sitter-basic.md
docs/superpowers/specs/: 2026-03-26-tree-sitter-basic-design.md
examples/gwbasic/: hello.bas
examples/msbasic2/: hello.bas
examples/qbasic/: hello.bas
grammars/common/: common.js
grammars/gwbasic/: grammar.js  tree-sitter.json
grammars/gwbasic/queries/: highlights.scm
grammars/gwbasic/src/: grammar.json  node-types.json  parser.c
grammars/gwbasic/test/corpus/: error_recovery.txt  expressions.txt  file_io.txt  graphics.txt  statements.txt
grammars/msbasic2/: grammar.js  tree-sitter.json
grammars/msbasic2/queries/: highlights.scm
grammars/msbasic2/src/: grammar.json  node-types.json  parser.c
grammars/msbasic2/test/corpus/: dialect_specific.txt  statements.txt  structure.txt
grammars/qbasic/: grammar.js  tree-sitter.json
grammars/qbasic/queries/: highlights.scm
grammars/qbasic/src/: grammar.json  node-types.json  parser.c
grammars/qbasic/test/corpus/: block_control_flow.txt  error_recovery.txt  expressions.txt  procedures.txt  quickbasic.txt  statements.txt  types.txt
