[package]
name = "tree-sitter-gwbasic"
version = "0.2.0"
edition = "2021"
description = "Tree-sitter grammar for GW-BASIC"
license = "MIT"
repository = "https://github.com/aovestdipaperino/legacy-basic-tree-sitter"
homepage = "https://github.com/aovestdipaperino/legacy-basic-tree-sitter"
keywords = ["tree-sitter", "parser", "basic", "gwbasic"]
categories = ["parsing", "text-editors"]
readme = "../../README.md"
build = "build.rs"
autoexamples = false
include = [
  "Cargo.toml",
  "build.rs",
  "src/**",
  "grammar-src/**",
  "queries/**",
]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1"

[dev-dependencies]
tree-sitter = "0.25"
