[package]
name = "tree-sitter-qbasic"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter grammar for QBasic"
license = "MIT"
repository = "https://github.com/aovestdipaperino/legacy-basic-tree-sitter"
homepage = "https://github.com/aovestdipaperino/legacy-basic-tree-sitter"
keywords = ["tree-sitter", "parser", "basic", "qbasic"]
categories = ["parsing", "text-editors"]
readme = "../../README.md"
build = "build.rs"
autoexamples = false
include = [
  "Cargo.toml",
  "build.rs",
  "src/**",
  "grammar-src/**",
  "queries/**",
]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1"

[dev-dependencies]
tree-sitter = "0.25"
